--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.13.1",
+    "bootstrap": "^5.0.2",
     "next": "11.0.1",
+    "next-images": "^1.8.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-is": "^17.0.2",
+    "sass": "^1.35.1",
+    "styled-components": "^5.3.0",
+    "webpack": "^5.42.0"
   },
   "devDependencies": {
     "@types/react": "17.0.13",
