--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.1",
     "babel-plugin-styled-components": "^1.13.1",
     "bootstrap": "^5.0.2",
     "next": "11.0.1",
