--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@popperjs/core": "^2.10.1",
+    "@types/redux-logger": "^3.0.9",
     "babel-plugin-styled-components": "^1.13.1",
     "bootstrap": "^5.0.2",
     "next": "11.0.1",
     "next-images": "^1.8.1",
+    "next-sitemap": "^1.6.203",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "^17.0.2",
-    "sass": "^1.35.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
+    "sass": "^1.45.1",
     "styled-components": "^5.3.0",
     "webpack": "^5.42.0"
   },
